--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
         @Ryuichimonji <br>
         @machotendo <br>
         @hika_tsugu <br>
+        @EveryonesBanana <br>
       </h3>
       <hr>
       <img src="e.jpg" class="rounded-circle d-block imgRegular"><br>
