--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta charset="en">
-  <meta name="viewport" content="width=device-width, initial-scale 1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale 1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>ゆうきーさん！</title>
   <link rel="stylesheet" href="bootstrap.css" type="text/css">
@@ -16,6 +16,20 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Amaranth&display=swap" rel="stylesheet">
   <link rel="icon" href="eyes.webp" type="image">
+  <meta name="title" content="ゆうきーさん！">
+  <meta name="description" content="こんいちわ！">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://metatags.io/">
+  <meta property="og:title" content="ゆうきーさん！">
+  <meta property="og:description" content="こんいちわ！">
+  <meta property="og:image"
+    content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://metatags.io/">
+  <meta property="twitter:title" content="ゆうきーさん！">
+  <meta property="twitter:description" content="こんいちわ！">
+  <meta property="twitter:image"
+    content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 </head>
 
 <body>
