--- a/index.html
+++ b/index.html
@@ -18,18 +18,19 @@
   <link rel="icon" href="eyes.webp" type="image">
   <meta name="title" content="ゆうきーさん！">
   <meta name="description" content="こんいちわ！">
+  <meta property="image" content="18.png">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://metatags.io/">
+  <meta property="og:url" content="https://nekotagram.000webhostapp.com/">
   <meta property="og:title" content="ゆうきーさん！">
   <meta property="og:description" content="こんいちわ！">
   <meta property="og:image"
-    content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    content="18.png">
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://metatags.io/">
+  <meta property="twitter:url" content="https://nekotagram.000webhostapp.com/">
   <meta property="twitter:title" content="ゆうきーさん！">
   <meta property="twitter:description" content="こんいちわ！">
   <meta property="twitter:image"
-    content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    content="18.png">
 </head>
 
 <body>
